unpackaged/main/default/objects/ET_Pricing_Service_Reserve_Master__c/ET_Pricing_Service_Reserve_Master__c.object-meta.xml
<CustomObject>
    <label>Pricing Service Reserve Master</label>
    <nameField>
        <displayFormat>PSRM-{0000}</displayFormat>
        <label>Pricing Service Reserve Master  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Service Reserve Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>