unpackaged/main/default/objects/ET_Pricing_Service_Reserve_Master__c/fields/ET_Depreciation_Method__c.field-meta.xml
<CustomField>
    <fullName>ET_Depreciation_Method__c</fullName>
    <label>Depreciation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerated</fullName>
            </value>
            <value>
                <fullName>Straight Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>