unpackaged/main/default/objects/ET_Pricing_Service_Reserve_Master__c/fields/ET_Driver_Reserve_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Driver_Reserve_Rate__c</fullName>
    <label>Driver Reserve Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>