unpackaged/main/default/objects/ET_Pricing_Service_Reserve_Master__c/fields/ET_Manpower_Reserve_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Manpower_Reserve_Rate__c</fullName>
    <label>Manpower Reserve Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>