unpackaged/main/default/objects/ET_Pricing_Service_Reserve_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Service_Type__c</columns>
    <columns>ET_Depreciation_Method__c</columns>
    <columns>ET_Depreciation_Reserve_Rate__c</columns>
    <columns>ET_Fuel_Reserve_Rate__c</columns>
    <columns>ET_General_Reserve_Rate__c</columns>
    <columns>ET_Manpower_Reserve_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>